[FIX] project: button to assign should be visible on line being hovered
Steps to reproduce:
- Navigate to the 'project.task' kanban card.
- click on the checkbox of the sub-task which is on card of the task.
-hover the subtask.

Issue:
- The 'Assign People' button is currently always visible for each sub-task,
  which may lead to cluttered UI.

Solution:
- Modify the UI behavior to display the 'Assign People' button only when
  hovering over a sub-task line in the 'project.task' kanban card's sub-tasks
  list.

task-3549267

--- a/addons/project/static/src/components/subtask_kanban_list/subtask_kanban_list.scss
+++ b/addons/project/static/src/components/subtask_kanban_list/subtask_kanban_list.scss
@@ -16,5 +16,10 @@
 
     .subtask_list_row:hover {
         background-color: mix($table-color, $table-bg, percentage($table-hover-bg-factor + 0.1));
+        @include media-breakpoint-up(sm) {
+            .o_field_widget.o_field_many2many_tags_avatar .o_quick_assign {
+                visibility: visible !important;
+            }
+        }
     }
 }
