--- a/addons/project/static/src/views/project_task_kanban/project_task_kanban_view.scss
+++ b/addons/project/static/src/views/project_task_kanban/project_task_kanban_view.scss
@@ -9,4 +9,24 @@
         padding-right: 3px;
         font-size: 16px;
     }
+
+    .o_kanban_record {
+        @include media-breakpoint-up(sm) {
+            &:hover {
+                .o_field_widget.o_field_many2many_tags_avatar .o_quick_assign {
+                    visibility: hidden;
+                }
+            }
+        }
+    }
+
+    .oe_kanban_content {
+        @include media-breakpoint-up(sm) {
+            &:hover {
+                .o_field_widget.o_field_many2many_tags_avatar .o_quick_assign {
+                    visibility: visible;
+                }
+            }
+        }
+    }
 }
